_sass/foundation/components/_custom-intersections.scss
// These are the colours, as detailed in _global.scss (copied here for reference):

// $yellow_-02      : #f7f4e8; // Lightest of the lightest yellow
// $yellow_-01      : #f2eac9; // Lighter than Lightest yellow
// $yellow_01      : #fcd606; // Lightest yellow
// $yellow_02      : #edc31a; // Darker
// $yellow_03      : #d7b428; // Darkest

// $green_-02       : #e1f4f0; // Lightest of the lightest green
// $green_-01       : #cbefe8; // Lighter than Lightest green
// $green_01       : #62d3bd; // Lightest green
// $green_02       : #41a491; // Darker
// $green_03       : #348c7b; // Darkest

// $greyDan_01        : #efeeee; // Lightest
// $greyDan_02        : #e9e8e7; // Lighter
// $greyDan_03        : #dadad9; // Light
// $greyDan_04        : #cecece; // Dark

// $grey_01        : #dadad9; // Light
// $grey_02        : #a5a5a5; // Darker
// $grey_03        : #929292; // Darker yet
// $grey_04        : #393939; // Darkest

// $ruby_01        : #f23b74; // Bright
// $ruby_02        : #b02752; // Darker
// $ruby_03        : #941d42; // Darkest

// $blue_-02        : #e8f1f9; // Brightest blue
// $blue_-01        : #d1e6f2; // Brighter blue
// $blue_00        : #4094d3; // blue
// $blue_01        : #2a72a8; // Darker blue
// $blue_02        : #195c8c; // Darkest blue


// HEADER
// .top-bar-section {
// // Image:
// 	> ul li a {
// 		color: #b02752;
// 		font-family: 'Source Code Pro' 700;
// 		>:hover {
// 			color: pink;
// 			background: red;
// 		}
// 	}
// 	> li:not(.has-form) a:not(.button):hover {
// 		background: red;
// 	}
// }

img.header-logo  {
		width: auto;
		height: auto;
		max-width: 2.5em;
		margin-top: -5px;
	}

p.header-line {
	font-size: 1.5em;
	line-height: 1.8em;
	font-weight: 400;
	margin-bottom: 2rem;
}

p{
	margin-bottom: 2.42rem;
}

.full{
	padding: 0 0 20px 0;
}

.index-header-text {
	padding: 2em 0 0;
}

.main-page-header {
	padding: 2em 0 20px 0;
}

.medium-6.columns{
	margin-bottom: 1.42rem;
}
.medium-12.columns{
	margin-bottom: 1.42rem;
}


.top-bar-section {
	&:hover {
		background: red;
	}
}

.index_page {
	text-align: center;
	
}

.button-link {
	color: white;
	background: $ruby_01;
	padding: 15px 15px;
	height: 2em;
	// border-color: black;
	margin-top:20px;
	-moz-border-radius: 0.3rem;
	-webkit-border-radius: 0.3rem;
	border-radius: 0.3rem;

	&:hover {
		background: $blue_01;
		color: white;
	}
}



img.header-logo .shrink {

    filter: gray; /* IE6-9 */
  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
}

// Styles for speakers and artists

.people {
	display: block;
	margin-bottom: 20px;
}

.name {
	font-size: 1.8em;
	font-family: 'Source Code Pro';
	font-weight: 600;
	opacity: 0.8;
	margin-bottom: 0;
}

.pos {
	font-size: 1.5em;
	font-family: 'Source Code Pro';
	margin-bottom: 0.8em;
    line-height: 1.2em;
    margin-top: 0.8em;
}

.bio {
	margin-bottom: 1.7rem;
}

ul.socials {
	padding: 0;
	margin: 0;
	
	> li {
	display: inline-block;
	margin-right: .1rem;
	margin-bottom: .15rem;
	
		> a i {
		  width: 2.5rem;
		  height: 2.5rem;
		  -moz-border-radius: 1.25rem;
		  -webkit-border-radius: 1.25rem;
		  border-radius: 1.25rem;
		  background: $ruby_01;
		  color: #fff;
		  text-align: center;
		  font-size: 1.25rem;
		  line-height: 2.5rem;
		}
		> a:hover i {
			-moz-transition: all 0.2s linear;
			-o-transition: all 0.2s linear;
			-webkit-transition: all 0.2s linear;
			transition: all 0.2s linear;
			background: $ruby_02;
			// color: #333;
			
		}
	}
}

// Strapline styles on index page (theme title)

.intro-text {
	text-align: center;
	color: white;
	font-size: 2.8em;
	opacity: 0.5;
	&.body {
		opacity: 1;
		margin-bottom: 1.5em;
	}
	&.para {
		font-size: 1.8em;
		opacity: 1;
	}
}

// Front page sections for events, exhibition, etc

.front-page-section {
	padding: 2em 0 0 0;
	&.symposium {
		background: $blue_00; //$yellow_-01;
		color: black; 
	}
	&.events {
		background: $yellow_01;
		// color: black;
	}
	&.exhibition {
		background: $ruby_01;
	}
	
}

// INDEX HEADER

// .index-header-text {
// 	padding: 2em 0 0 0;
// }

// Overrides for footer section

/*Footer */
#footer {
  background: $green_01;
  // background: $yellow_02;
  color: #999;

	>h1 {
	  margin-bottom: 25px;
	}

	> h1, h2, h3, h4, h5, h6 {
  		color: $grey_04;
	}
	
	> ul {
  		margin: 0;
	}
	> ul li {
	  list-style: none;
	  line-height: 1.875rem;
	}
	> ul a {
	  color: #999;
	}
	> ul a:hover {
	  color: #eee;
	}
	> ul.socials.footer {
		> li {
			list-style: none;
			display: inline-block;
			margin-right: 5px;
			margin-bottom: 8px;
			> a {
				  width: 40px;
				  height: 40px;
				  -moz-border-radius: 20px;
				  -webkit-border-radius: 20px;
				  border-radius: 20px;
				  background: $grey_04;
				>  i {
				  color: #333;
				  text-align: center;
				  font-size: 1.25rem;
				  line-height: 3rem;
				}
		}
		> a:hover {
		  -moz-transition: all 0.2s linear;
		  -o-transition: all 0.2s linear;
		  -webkit-transition: all 0.2s linear;
		  transition: all 0.2s linear;
		  background: #F9CE06;
			> i {
		}
	}
}

}
	> input.email-address {
	  padding: 5px 15px;
	  height: 3.3rem;
	  background: #eee;
	}

	>.fullwidth p.copyright {
	  padding-left: 30px;
	  float: left;
	  font-size: 1.28571rem;
	}
	>.fullwidth ul.socials {
	  text-align: right;
	  padding-right: 20px;
	}
	>.fullwidth ul.socials li {
	  margin-right: 10px;
	}
}

// NAVIGATION AT TOP

.top-bar-section li.active:not(.has-form) a:not(.button) {
		font-weight: 800;
		color: $ruby_01;
		background-color: transparent;
}

.top-bar-section li.active:not(.has-form) a:not(.button):hover {
	background: $white;
	color: $ruby_02;

}

.top-bar-section li:not(.has-form) a:not(.button):hover {
	background: $white;
	color: $ruby_01;
}

.contain-to-grid, .sticky {
	// This makes the top logo grey when the full-size site is viewed, and colours it on scroll.
	>nav.top-bar ul.title-area li.name h1 a img.header-logo {
		filter: grayscale(1);
		-webkit-filter: greyscale(1);
	}
	&.fixed {
		>nav.top-bar ul.title-area li.name h1 a img.header-logo {
			filter: grayscale(0);
			-webkit-filter: greyscale(0);
		}
	}
	// This bit makes the logo grey when the mobile menu is closed, adn colours it when the mobile menu is expanded.
	>nav.top-bar {
		>ul.title-area li.name h1 a img.header-logo {
			filter: grayscale(1);
			-webkit-filter: greyscale(1);
		}
		&.expanded {
			>ul.title-area li.name h1 a img.header-logo {
				filter: grayscale(0);
				-webkit-filter: greyscale(0);
			}	
		}
	}
}


// FOOTER

.links > ul li  {
	color: white;
	a{
		color: white;
	}
	
	a:hover {
		color: $blue_01;
	}
}

div.footer-logo > a img {
	width: 65%; 
	height: auto; 
	opacity: .5; 
	-webkit-opacity: .5;
	text-align: center;
}

// SCHEDULE PAGE

.front-page-section.events{
	background: $yellow_01;
}
.front-page-section.location{
	background: $yellow_-01;
}

.text-schedule{
	color: $grey_04;
}

.index {
	> h2 {
		font-size: 2em;
	}
}

// HANDLER FOR IFRMAE

